<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fb_dialog_layout"
    android:padding="0dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding12dp"
        android:text="@string/str_sort_by"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding16dp"
        android:paddingRight="@dimen/padding16dp"
        android:weightSum="5">

        <TextView
            style="@style/style_sort_label"
            android:text="@string/str_alphabetical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/padding4dp">

            <ToggleButton
                android:id="@+id/toggle_btn_alphabetical_up"
                android:layout_width="@dimen/padding32dp"
                android:layout_height="@dimen/padding32dp"
                android:background="@drawable/selector_sort_up"
                android:textOff=""
                android:textOn="" />

            <Space
                android:layout_width="@dimen/padding32dp"
                android:layout_height="match_parent" />

            <ToggleButton
                android:id="@+id/toggle_btn_alphabetical_down"
                android:layout_width="@dimen/padding32dp"
                android:layout_height="@dimen/padding32dp"
                android:background="@drawable/selector_sort_down"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding16dp"
        android:paddingRight="@dimen/padding16dp"
        android:weightSum="5">

        <TextView
            style="@style/style_sort_label"
            android:text="@string/str_total_cases" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/padding4dp">

            <ToggleButton
                android:id="@+id/toggle_btn_total_up"
                android:layout_width="@dimen/padding32dp"
                android:layout_height="@dimen/padding32dp"
                android:background="@drawable/selector_sort_up"
                android:textOff=""
                android:textOn="" />

            <Space
                android:layout_width="@dimen/padding32dp"
                android:layout_height="match_parent" />

            <ToggleButton
                android:id="@+id/toggle_btn_total_down"
                android:layout_width="@dimen/padding32dp"
                android:layout_height="@dimen/padding32dp"
                android:background="@drawable/selector_sort_down"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding16dp"
        android:paddingRight="@dimen/padding16dp"
        android:weightSum="5">

        <TextView
            style="@style/style_sort_label"
            android:text="@string/str_deaths_small" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/padding4dp">

            <ToggleButton
                android:id="@+id/toggle_btn_death_up"
                android:layout_width="@dimen/padding32dp"
                android:layout_height="@dimen/padding32dp"
                android:background="@drawable/selector_sort_up"
                android:textOff=""
                android:textOn="" />

            <Space
                android:layout_width="@dimen/padding32dp"
                android:layout_height="match_parent" />

            <ToggleButton
                android:id="@+id/toggle_btn_death_down"
                android:layout_width="@dimen/padding32dp"
                android:layout_height="@dimen/padding32dp"
                android:background="@drawable/selector_sort_down"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding16dp"
        android:paddingRight="@dimen/padding16dp"
        android:weightSum="5">

        <TextView
            style="@style/style_sort_label"
            android:text="@string/str_rec_small" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/padding4dp">

            <ToggleButton
                android:id="@+id/toggle_btn_rec_up"
                android:layout_width="@dimen/padding32dp"
                android:layout_height="@dimen/padding32dp"
                android:background="@drawable/selector_sort_up"
                android:textOff=""
                android:textOn="" />

            <Space
                android:layout_width="@dimen/padding32dp"
                android:layout_height="match_parent" />

            <ToggleButton
                android:id="@+id/toggle_btn_rec_down"
                android:layout_width="@dimen/padding32dp"
                android:layout_height="@dimen/padding32dp"
                android:background="@drawable/selector_sort_down"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding4dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/btn_sort_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/cancel"
            android:textColor="@color/black_overlay"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_sort_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/str_ok"
            android:textColor="@android:color/white"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>